@@ -166,6 +166,56 @@
   </refsection>
 
   <refsection>
+    <title>Exit Status</title>
+
+    <para><command>zbarimg</command> returns an exit code to indicate the
+    status of the program execution. Current exit codes are:</para>
+
+    <variablelist>
+      <varlistentry>
+        <term>0</term>
+        <listitem>
+          <para>Barcodes successfully detected in all images. Warnings may
+          have been generated, but no errors.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>1</term>
+        <listitem>
+          <para>An error occurred while processing some image(s).  This
+          includes bad arguments, I/O errors and image handling errors from
+          ImageMagick.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>2</term>
+        <listitem>
+          <para>ImageMagick fatal error.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>3</term>
+        <listitem>
+          <para>The user quit the program before all images were scanned.
+          Only applies when running in interactive mode
+          (with <option>--display</option>)</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>4</term>
+        <listitem>
+          <para>No barcode was detected in one or more of the images.  No
+          other errors occurred.</para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+  </refsection>
+
+  <refsection>
     <title>See Also</title>
     <para><xref linkend="zbarcam"/></para>
     <para><link xlink:href="http://zbar.sf.net/"/></para>
